# scicat-ingestor

./: .copier-answers.yml  .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  TESTING.md  config.20240405.json  config.sample.json  config_sample.json  consumer.py  env_SFI_20211001.yml  env_SFI_20211125.yml  env_SFI_20220525.yml  env_sci.yml  environment_SFI.yml  ingestor_lib.py  latest  offline_ingestor.py  online_ingestor.py  pixi.toml  pyproject.toml  requirements.txt  requirements_SFI.txt  requirements_SFI_20220808.txt  scicat.py  scicat_ingestor.py  start.py  test_scicat_ingestor.py  tox.ini  user_office.py  user_office_lib.py  versions.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-release.yml  docs-main.yml  docs-release.yml  docs.yml  integration.yml  test.yml
25.05.0/: 404.html  index.html  sitemap.xml
25.05.0/CODE_OF_CONDUCT/: index.html
25.05.0/_mermaid_charts/_file_ingestion_sequence/: index.html
25.05.0/_mermaid_charts/_file_writer_sequence/: index.html
25.05.0/_mermaid_charts/_infra_structure/: index.html
25.05.0/_mermaid_charts/_ingestor_flow_details/: index.html
25.05.0/_mermaid_charts/_metadata_retrieval_flow/: index.html
25.05.0/developer-guide/adrs/: index.html
25.05.0/developer-guide/configuration/: index.html
25.05.0/developer-guide/documentation/: index.html
25.05.0/developer-guide/getting-started/: index.html
25.05.0/getting-started/: index.html
25.05.0/user-guide/configuration/: index.html
25.05.0/user-guide/metadata-schemas/: index.html
25.05.0/user-guide/offline-ingestor/: index.html
25.05.0/user-guide/online-ingestor/: index.html
25.05.0/user-guide/overview/: index.html
25.08.0/: 404.html  index.html  sitemap.xml
25.08.0/CODE_OF_CONDUCT/: index.html
25.08.0/_mermaid_charts/_file_ingestion_sequence/: index.html
25.08.0/getting-started/: index.html
26.5.0/: 404.html  index.html  sitemap.xml
26.5.0/CODE_OF_CONDUCT/: index.html
26.5.0/getting-started/: index.html
26.6.0/: 404.html  index.html  sitemap.xml
26.6.0/CODE_OF_CONDUCT/: index.html
26.6.0/getting-started/: index.html
CI/: Dockerfile_sci_filewriter  Dockerfile_sci_scicat_ingestor_testing  Dockerfile_sfi_efu  Dockerfile_sfi_scicat_ingestor  config.CI.json  docker-compose.CI.yml
CI/scicat-backend/: config.local.js  config.local.json  datasources.json
configs/: config-3.json  config.json.local.test.src.template
develop/: 404.html  index.html  sitemap.xml
develop/CODE_OF_CONDUCT/: index.html
develop/getting-started/: index.html
develop/search/: search_index.json
docker/: Dockerfile-BE-V4.x  docker-compose-1.yml  docker-compose-3.yml  docker-compose-with-ui.yml  docker-compose.yml  message.json
documentation/: CONFIGURATION.md  INTROUCTION.md  OFFLINE_INGESTOR.md  ONLINE_INGESTOR.md  SCHEMAS.md  SCHEMAS_GENERAL_SECTION.md  SCHEMAS_SCHEMA_SECTION.md  SCHEMAS_VARIABLES_SECTION.md  WORKFLOW.md  mkdocs.yml
documentation/docs/: LICENSE  getting-started.md  index.md
examples/producer/: nexus_config.json  write_job_w_error_checking.py
generator/: requirements_SFI.txt  sfi_generator.ipynb  sfi_generator.py  sfi_generator_config.json  sfi_generator_config_docker_local.json  sfi_generator_config_v2.json  sfi_generator_v2.ipynb  sfi_generator_v2.py
requirements/: base.in  base.txt  basetest.in  basetest.txt  ci.in  ci.txt  dev.in  dev.txt  docs.in  docs.txt  make_base.py  mypy.txt  nightly.in  nightly.txt  static.txt
resources/: base.configuration.json.example  base.imsc.json.example  base.imsc.yml.example  coda.configuration.json.example  coda.imsc.json.example  coda.imsc.yml.example  config.sample.json  config.sample.yml  config.scicatingestor05.json.20241211  d17.imsc.json.example  dream.configuration.json.example  dream.imsc.json.example  dream.imsc.yml.example  loki.configuration.json.example  loki.imsc.json.example  loki.imsc.yml.example  small-coda.imsc.json.example  small-coda.imsc.yml.example  small-ymir.imsc.yml.example  user_retrievability.imsc.json.example  user_retrievability_coda.imsc.json.example
resources/modules/: ill.imsc.json.example
schemas/: d17.imsc.json  diff_powder.imsc.json  diff_single_cristal.json  figaro.imsc.json  ill.imsc.json  lss_sans.imsc.json  panther.imsc.json  tas.imsc.json  tof_bs.imsc.json  tof_hr.imsc.json
scicat_schemas/: dataset.schema.json
src/: background-ingestor.py  background_ingestor.py  scicat_communication.py  scicat_configuration.py  scicat_dataset.py  scicat_devtools.py  scicat_health_check.py  scicat_ingestor.py  scicat_ingestor_utils.py  scicat_job.py  scicat_kafka.py  scicat_logging.py  scicat_metadata.py  scicat_nexus_helper.py  scicat_offline_ingestor.py  scicat_online_ingestor.py  scicat_path_helpers.py  scicat_rabbitmq.py  scicat_sample_ingestor.py  scicat_update_published.py  system_helpers.py
src/fallback_metadata_schema/: __init__.py  dump.py  ess-fallback.imsc.yml
src/scicat_ingestor/: io.py
src/scicat_schemas/: __init__.py  datafilelist_item.schema.json.jinja  dataset.schema.json.jinja  load_template.py  origdatablock.schema.json.jinja  single_datafile.json.jinja
test-data/: README.md  small-coda.hdf  small-ymir.hdf
tests/: _scicat_healthcheck.py  _scicat_ingestor.py  _scicat_stress_test.py  conftest.py  docker-compose-file-writer.yml  docker-compose.yml  invalid_config.json  minimum_test.py  test_file_io_delay.py  test_logging.py  test_metadata_extractor.py  test_scicat_communication.py  test_scicat_config.py  test_scicat_configuration.py  test_scicat_dataset.py  test_scicat_health_check.py  test_scicat_metadata_schema.py  test_scicat_path_helpers.py  test_scicat_schema.py
tests/integration/: functionalAccounts.json  ingestor.config.yml.template  jobConfig.yml  setup_test_environment.py  small-coda.imsc.yml.template
tests/resources/: example_schema.imsc.yml  invalid_config.yml  legacy_json_config.json
tests/subprocess_helpers/: _fake_filewriter.py
v25.01.0/: 404.html  index.html  sitemap.xml
(+77 files in other folders)
