[build-system]
requires = [
  "setuptools>=68",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "scicat-filewriter-ingest"
description = "A daemon that creates a raw dataset using scicat interface whenever a new file is written by a file-writer."
authors = [{ name = "ScicatProject contributors" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.12"

# IMPORTANT:
# Run 'tox -e deps' after making changes here. This will update requirement files.
# Make sure to list one dependency per line.
dependencies = [
  "kafka-python",
  "confluent_kafka",
  "ess-streaming-data-types",
  "requests",
  "rich",
  "graypy"
]

dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/ScicatProject/scicat-filewriter-ingest/issues"
"Documentation" = "https://ScicatProject.github.io/scicat-filewriter-ingest"
"Source" = "https://github.com/ScicatProject/scicat-filewriter-ingest"

[project.scripts]
scicat_ingestor = "scicat_ingestor:main"

[project.entry-points."scicat_ingestor.metadata_extractor"]
max = "numpy:max"
min = "numpy:min"
mean = "numpy:mean"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
  "error",
]

[tool.bandit]
# Excluding tests because bandit doesn't like `assert`.
exclude_dirs = ["docs/conf.py", "tests"]

[tool.black]
skip-string-normalization = true

[tool.isort]
skip_gitignore = true
profile = "black"
known_first_party = ["scicat-filewriter-ingest"]

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_unreachable = true
