[build-system]
requires = [
  "setuptools>=77",
  "setuptools_scm[toml]>=8.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "scicat-ingestor"
description = "A daemon that creates a raw dataset using scicat interface whenever a new file is written by a file-writer."
authors = [{ name = "Scicatproject contributors" }]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.12"

# IMPORTANT:
# Make sure to list one dependency per line.
dependencies = [
  "confluent-kafka>=2.13.2",
  "ess-streaming-data-types>=0.27.0",
  "graypy>=2.1.0",
  "h5py>=3.16.0",
  "kafka-python>=2.3.0",
  "requests>=2.33.0",  # Extract zip path no-validation bug fixed.
  "pyyaml>=6.0.2",
  "rich>=14.3.3"
]

dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
docs = [
    # `mkdocs` version 2 will have breaking changes
    # and `mkdocs-material` will not not compatible anymore.
    # When that happens, we should move on to `zensical`
    # or other documentation builder instead.
    # But `mike` only works with `mkdocs` at the moment
    # so we are keeping `mkdocs` for now...
    "mkdocs-material>=9.7.1",
    "mike",
    "mkdocs-mermaid2-plugin>=1.2.3",
    "mkdocs-include-markdown-plugin>=7.2.0",
]
# All dependencies are pinned since it is an application, not a library.
# In the pixi.toml, this is included in the default environment dependencies.
# However, pinned dependencies might make setting up development environment cumbersome
# so we only pin these version in the `app` extra dependencies.
# If you update the environment, pixi `dev` environment
# will get updated with these dependencies but not the `default` ones.
app = [
  "confluent-kafka==2.13.2",
  "ess-streaming-data-types==0.27.0",
  "graypy==2.1.0",
  "h5py==3.16.0",
  "kafka-python==2.3.0",
  "requests==2.33.0",
  "pyyaml==6.0.3",
  "rich==14.3.3"
]

[project.urls]
"Bug Tracker" = "https://github.com/ScicatProject/scicat-ingestor/issues"
"Documentation" = "https://ScicatProject.github.io/scicat-ingestor"
"Source" = "https://github.com/ScicatProject/scicat-ingestor"

[project.scripts]
scicat_ingestor = "scicat_online_ingestor:main"
scicat_background_ingestor = "scicat_offline_ingestor:main"
# Dev Tools
scicat_validate_ingestor_config = "scicat_configuration:validate_config_file"
scicat_validate_metadata_schema = "scicat_metadata:validate_schema"
scicat_synchronize_config = "scicat_configuration:synchronize_config_file"
scicat_json_to_yaml = "scicat_configuration:json_to_yaml"
    # We don't have to test this json to yaml script because we always check if
    # the config/schema files match the dataclasses.
    # It can be removed as soon as we stop supporting legacy JSON config files.

[project.entry-points."scicat_ingestor.metadata_extractor"]
max = "numpy:max"
min = "numpy:min"
mean = "numpy:mean"

[tool.setuptools_scm]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = """
--strict-config
--strict-markers
--import-mode=importlib
-ra
-v
"""
testpaths = "tests"
filterwarnings = [
  "error",
]

[tool.ruff]
line-length = 88
extend-include = ["*.ipynb"]
extend-exclude = [
    ".*", "__pycache__", "build", "dist", "install",
]

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
select = ["B", "C4", "DTZ", "E", "F", "G", "I", "PERF", "PGH", "PT", "PYI", "RUF", "S", "T20", "UP", "W"]
ignore = [
    # Conflict with ruff format, see
    # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", "COM819", "D206", "D300", "E111", "E114", "E117", "ISC001", "ISC002", "Q000", "Q001", "Q002", "Q003", "W191",
]
fixable = ["B010", "I001", "PT001", "RUF022"]
isort.known-first-party = ["scicat-ingestor"]
pydocstyle.convention = "numpy"

[tool.ruff.lint.pycodestyle]
max-line-length = 108  # Clear and descriptive variable names are more valuable than short lines

[tool.ruff.lint.per-file-ignores]
# those files have an increased risk of relying on import order
"tests/*" = [
    "S101",  # asserts are fine in tests
    "B018",  # 'useless expressions' are ok because some tests just check for exceptions
]
"*.ipynb" = [
    "E501",  # longer lines are sometimes more readable
    "F403",  # *-imports used with domain types
    "F405",  # linter may fail to find names because of *-imports
    "I",  # we don't collect imports at the top
    "S101",  # asserts are used for demonstration and are safe in notebooks
    "T201",  # printing is ok for demonstration purposes
]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
strict = true
ignore_missing_imports = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_unreachable = true

[tool.codespell]
ignore-words-list = [
    # Codespell wants "socioeconomic" which seems to be the standard spelling.
    # But we use the word in our code of conduct which is the contributor covenant.
    # Let's not modify it if we don't have to.
    "socio-economic",
    # SVG uses these abbreviations
    "wtH",
    "nd",
]
